--- a/env.example
+++ b/env.example
@@ -46,6 +46,15 @@ SENDGRID_API_KEY=your_sendgrid_api_key_here
 EMAIL_FROM=noreply@internhub.com
 
 # ===========================================
+# Admin Configuration (for createAdmin.js script)
+# ===========================================
+# Admin username (default: admin)
+ADMIN_USERNAME=admin
+
+# Admin password (CHANGE THIS for production!)
+ADMIN_PASSWORD=your_secure_admin_password_here
+
+# ===========================================
 # Optional: Additional Configuration
 # ===========================================
 # Node environment (development/production)
